...
    <string name="cancel">Abbrechen</string>

    <string name="info_title">Information</string>
    <string name="settings_title">Einstellungen</string>
    <string name="logout_title">Logout</string>

    <string name="login_title">Login</string>
    <string name="login_register_account">Noch kein Account?\nKlicken Sie hier um sich zu registrieren</string>
    <string name="register_title">Registrieren</string>
    <string name="first_name">Vorname</string>
    <string name="last_name">Nachname</string>
    <string name="email">Email</string>
    <string name="pw1_label">Passwort</string>
    <string name="pw2_label">Passwort wiederholen</string>

    <string name="profile_title">Profil</string>
    <string name="profile_qr_info">Mit diesem QR-Code können Sie von Buddys hinzugefügt werden</string>

    <string name="buddy_title">Buddy%s</string>
...
